@@ -158,6 +158,7 @@ void PaintStyleEditor::on_PaintList_itemClicked(QListWidgetItem* it)
 	LabelTag->setText(FP.getLabelTag());
 	LabelBackgroundTag->setText(FP.getLabelBackgroundTag());
 	LabelHalo->setChecked(FP.getLabelHalo());
+	LabelArea->setChecked(FP.getLabelArea());
 	
 	FreezeUpdate = false;
 }
@@ -420,6 +421,14 @@ void PaintStyleEditor::on_LabelHalo_clicked(bool b)
 	if (idx >= thePainters.size())
 		return;
 	thePainters[idx].labelHalo(b);
+}
+
+void PaintStyleEditor::on_LabelArea_clicked(bool b)
+{
+	unsigned int idx = static_cast<unsigned int>(PaintList->currentRow());
+	if (idx >= thePainters.size())
+		return;
+	thePainters[idx].labelArea(b);
 }
 
 void PaintStyleEditor::on_LabelTag_textEdited()
